# path-model-resolver

./: pyproject.toml
src/fastapi_path_model_resolver/: resolvers.py
